[gd_scene load_steps=3 format=3 uid="uid://pgjl5evpm5b1"]

[ext_resource type="Script" uid="uid://hyse15cqitds" path="res://Scenes/UI/LoopDialog/looping_dialog.gd" id="1_pw38q"]
[ext_resource type="Theme" uid="uid://cp8rcvowk1kbc" path="res://Scenes/UI/KillCount/kill_count.tres" id="2_m0fsg"]

[node name="LoopingDialog" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_pw38q")

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.36
anchor_top = 0.385
anchor_right = 0.64
anchor_bottom = 0.615
offset_left = 82.6
offset_top = 44.3
offset_right = -82.6
offset_bottom = -44.3
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme = ExtResource("2_m0fsg")
theme_override_font_sizes/font_size = 72
text = "Oh no you looped back."
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme = ExtResource("2_m0fsg")
theme_override_font_sizes/font_size = 72
text = "Well try again"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme = ExtResource("2_m0fsg")
theme_override_font_sizes/font_size = 72
text = "Here's an upgrade!"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
